scl/binding/c_api/scl_c_api.h

using scl_index_t = scl::Index;
typedef double scl_real_t;
typedef int64_t scl_index_t;
typedef size_t scl_size_t;
// =============================================================================
// Core Utilities (core.cpp)
// =============================================================================

// --- Memory Operations ---

int scl_fill_real(scl_real_t* data, scl_size_t size, scl_real_t value);
int scl_fill_index(scl_index_t* data, scl_size_t size, scl_index_t value);
int scl_zero_real(scl_real_t* data, scl_size_t size);
int scl_zero_index(scl_index_t* data, scl_size_t size);
int scl_copy_fast_real(const scl_real_t* src, scl_real_t* dst, scl_size_t size);
int scl_copy_safe_real(const scl_real_t* src, scl_real_t* dst, scl_size_t size);
int scl_stream_copy_real(const scl_real_t* src, scl_real_t* dst, scl_size_t size);
// --- Array Utilities ---

int scl_iota_index(scl_index_t* data, scl_size_t size);
int scl_reverse_real(scl_real_t* data, scl_size_t size);
int scl_reverse_index(scl_index_t* data, scl_size_t size);
int scl_unique_real(scl_real_t* data, scl_size_t size, scl_size_t* out_new_size);
// --- Math Reductions ---

int scl_sum_real(const scl_real_t* data, scl_size_t size, scl_real_t* out_sum);
int scl_mean_real(const scl_real_t* data, scl_size_t size, scl_real_t* out_mean);
int scl_variance_real(
    const scl_real_t* data,
    scl_size_t size,
    scl_real_t mean,
    int ddof,
    scl_real_t* out_var
);
int scl_min_real(const scl_real_t* data, scl_size_t size, scl_real_t* out_min);
int scl_max_real(const scl_real_t* data, scl_size_t size, scl_real_t* out_max);
int scl_minmax_real(
    const scl_real_t* data,
    scl_size_t size,
    scl_real_t* out_min,
    scl_real_t* out_max
);
int scl_dot_real(
    const scl_real_t* x,
    const scl_real_t* y,
    scl_size_t size,
    scl_real_t* out_dot
);
int scl_norm_real(const scl_real_t* data, scl_size_t size, scl_real_t* out_norm);